opam-version: "2.0"

description: "OCaml interface to GTK+"
synopsis: "OCaml interface to GTK+"

maintainer: "garrigue@math.nagoya-u.ac.jp"
authors: ["Jacques Garrigue et al., Nagoya University"]
homepage: "http://lablgtk.forge.ocamlcore.org/"
bug-reports: "https://github.com/garrigue/lablgtk/issues"
dev-repo: "git+https://github.com/ejgallego/lablgtk.git"
doc: "https://ejgallego.github.io/lablgtk/lablgtk/"
license: "LGPL with linking exception"

depends: [
  "ocaml"     {         >= "4.05.0" }
  "dune"      { build & >= "1.4.0"  }
  "conf-gtk3" { build & >= "18"     }
  "cairo2"    {         >= "0.6"    }
]

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
