(executable
 (name dune_config)
 (modules dune_config)
 (libraries dune.configurator))

(rule
 (targets
   cflag-gtk+-3.0.sexp
   clink-gtk+-3.0.sexp
   ; cflag-gtksourceview-3.0.sexp
   ; clink-gtksourceview-3.0.sexp
   ; cflag-gtkspell-2.0.sexp
   ; clink-gtkspell-2.0.sexp
 )
 (action (run ./dune_config.exe)))

(executable
 (name varcc)
 (modules varcc)
 (flags :standard -w -3-6))

(executable
 (name propcc)
 (modules propcc)
 (flags :standard -w -3-6-27-35))

; (ocamllex xml_lexer)

(library
 (name lablgtk2)
 (public_name lablgtk2)
 (flags :standard -w -6-7-9-10-27-32-33-34-35-36-50 -no-strict-sequence)
 (wrapped false)
 (modules
   ; gtkBrokenProps ogtkBrokenProps gtkBroken gBroken
   gToolbox
   gpointer gobject gutf8 gaux glib
   gdkPixbuf pangoEnums pango
   gdkEnums gdk gdkEvent gdkKeysyms
   gtkEnums gtk gtkObject gtkSignal
   gtkStock
   gPango gDraw
   gObj gUtil
   gtkMain gMain
   gtkThread
   gtkWindow gWindow
   gtkData gData
   gContainer

   gtkActionProps    ogtkActionProps                 gAction
   gtkAssistantProps ogtkAssistantProps gtkAssistant gAssistant
   gtkBaseProps      ogtkBaseProps      gtkBase
   gtkBinProps       ogtkBinProps       gtkBin       gBin
   gtkButtonProps    ogtkButtonProps    gtkButton    gButton
   gtkEditProps      ogtkEditProps      gtkEdit      gEdit
   gtkFileProps      ogtkFileProps      gtkFile      gFile
   ; gtkListProps      ogtkListProps      gtkList      gList
   gtkMenuProps      ogtkMenuProps      gtkMenu      gMenu
   gtkMiscProps      ogtkMiscProps      gtkMisc      gMisc
   gtkPackProps      ogtkPackProps      gtkPack      gPack
   gtkRangeProps     ogtkRangeProps     gtkRange     gRange
   gtkTextProps      ogtkTextProps      gtkText      gText
   gtkTreeProps      ogtkTreeProps      gtkTree      gTree

 )
 (c_names
   wrappers
   ml_glib ml_gvaluecaml ml_gpointer ml_gobject
   ml_pango
   ml_gdk ml_gdkpixbuf
   ml_gtk ml_gtkmisc

   ml_gtkaction ml_gtkbin ml_gtkbutton ml_gtktext ml_gtkedit
   ml_gtkmenu ml_gtkfile ml_gtktree ml_gtkpack
   ; ml_gtkbroken ml_gtklist
   ml_gtkstock ml_gtkrange ml_gtkassistant
 )
 (c_flags         (:include cflag-gtk+-3.0.sexp))
 (c_library_flags (:include clink-gtk+-3.0.sexp))
 (libraries threads))

; (library
;  (name lablgtk2_sourceview2)
;  (public_name lablgtk2.sourceview2)
;  (flags :standard -w -6-7-27-32-33-34-36)
;  (wrapped false)
;  (modules_without_implementation
;    gtkSourceView2_types)
;  (modules
;    sourceView2Enums gtkSourceView2_types gtkSourceView2Props
;    ogtkSourceView2Props gtkSourceView2 gSourceView2)
;  (c_names ml_gtksourceview2)
;  (c_flags         (:include cflag-gtksourceview-2.0.sexp))
;  (c_library_flags (:include clink-gtksourceview-2.0.sexp))
;  (libraries lablgtk2))

; (library
;  (name lablgtk2_gspell)
;  (public_name lablgtk2.gspell)
;  (flags :standard -w -6-50)
;  (wrapped false)
;  (modules gtkSpell)
;  (c_names ml_gtkspell)
;  (c_flags         (:include cflag-gtkspell-2.0.sexp))
;  (c_library_flags (:include clink-gtkspell-2.0.sexp))
;  (libraries lablgtk2))

; (library
;  (name lablgtk2_gnome)
;  (public_name lablgtk2.gnome)
;  (flags :standard -w -6-50)
;  (wrapped false)
;  (modules
;    gnomeCanvasProps  ognomeCanvasProps  gnomeCanvas  gnoCanvas
;                                         gnomeDruid   gnoDruid
;  )
;  (c_names ml_gnomecanvas ml_gnomedruid)
;  (libraries lablgtk2))

(include dune-enum.sexp)
(include dune-prop.sexp)
